# Paimon

./: .env.dev  .env.prod  .gitignore  Dockerfile  Makefile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
cqhttp/: Dockerfile  Makefile  config.hjson  device.json
src/data/: managers.json
src/data/auth/: managers.json  switchers.json
src/data/character/: character_index.json  nickname.json
src/data/store/: 3A米忽悠陈睿二次元  648一次  giegie  kobo喜欢  一个正常的菜总其表现形式通常为不正常  一份涩图  不要乱射  世界各国摩拳擦掌  优衣小仓唯败了  偶像  兔兔阿米娅  凯尔希  凯尔希新衣服  切除  删除  别教机器人  努力学习的理由  区区二十分钟  原批  厨神  只保存6个月  可怜的虎鲸  呜呜  咩夸不行  啊这  喜欢草狗  圣经  基佬也得踢了  孝子论  害羞  富婆  封面  小丑  屏幕  平胸  幽灵鲨  很会撩的我  怪谁  我喜欢少妇  我想追她  (+49 more)
src/data/weapon/: weapon_index.json
src/plugins/: __init__.py
src/plugins/auth/: __init__.py
src/plugins/character/: __init__.py  get_character.py  get_charactor.py
src/plugins/cron/: __init__.py
src/plugins/fuben/: __init__.py
src/plugins/genshin/: __init__.py  query.py
src/plugins/ghs/: __init__.py  getPic.py
src/plugins/help/: __init__.py
src/plugins/mys/: __init__.py  get_data.py  get_img.py
src/plugins/other/: __init__.py  getPic.py  get_pic.py  valid.py
src/plugins/qiu_qiu_translation/: __init__.py  qiu_qiu_translation.py  translation.py
src/plugins/query_resource_points/: __init__.py  query.py  query_resource_points.py  resource_type_id.json
src/plugins/res_points/: __init__.py  query.py  resource_id.json
src/plugins/setu/: __init__.py  getPic.py  get_pic.py  parse.py
src/plugins/store/: __init__.py  parse.py
(+5 files in other folders)
